Delete comment endpoint
